# NewsAgent

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_ollama.py
.gemini/: aprendizado.md  context.yaml  gemini.md  tools.json
src/: README.md  agents.py  crew.py  tasks.py
src/resource/prompts/prompts-informativos/: prompt_briefing_editorial_informativo.txt  prompt_briefing_editorial_informativo.yaml  prompt_email_informativo.txt  prompt_portal_informativo.txt  prompt_whatsapp_informativo.txt
src/resource/prompts/prompts-tecnicos/: prompt_briefing_editorial_tecnico.txt  prompt_email_tecnico.txt  prompt_portal_tecnico.txt  prompt_whatsapp_tecnico.txt
src/tools/: rss_tool.py
src/utils/: html_generator.py
